--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.miguelmoura.nite_nightapp">
+    
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -34,6 +36,9 @@
         <activity
             android:name=".Favs"
             android:label="Favs" />
+        <activity
+            android:name=".GPSUpdate"
+            android:label="GPSUpdate" />
         <activity
             android:name=".EditProfile"
             android:label="EditProfile" />
