--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.miguelmoura.nite_nightapp">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -43,6 +44,9 @@
         <activity
             android:name=".Privacy"
             android:label="Privacy" />
+        <activity
+            android:name=".GPSUpdate"
+            android:label="GPSUpdate" />
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home"
